# r-kriging-servant-client-demo

./: .gitignore  .r-kriging-servant-client-demo.cabal.swp  LICENSE  README.md  r-kriging-servant-client-demo.cabal  stack.yaml  stack.yaml.orig
app/: Main.hs  devel.hs
src/: .Demo.hs.swp  Demo.hs  Demo.hs.orig
yesod-devel/: rebuild
