name:                r-kriging-servant-client-demo 
version:             0.1.0.0
synopsis:            A demo that shows R-kriging-servant running multiple R instances on one machine
description:         A Yesod Server hosting a FreeSketch P5.js sketch that splits an image into RGB channels.
                     Random samples are taken from the RGB pixel space and sent to be kriged by r-kriging servant instances.
                     Each channel connects to a different r-kriging-servant instance to perform kriging fit.
                     The kriging maps are displayed below.
homepage:
license:             BSD3
license-file:        LICENSE
author:              Fraser Dunlop
maintainer:          fraser.dunlop@gmail.com 
copyright:           2017 Fraser Dunlop
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Demo 
  build-depends:       base >= 4.7 && < 5
                     , FreeSketch
                     , yesod
                     , optparse-applicative
                     , transformers
                     , text
                     , r-kriging-servant
  default-language:    Haskell2010

executable kriging-colors-demo 
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , r-kriging-servant-client-demo 
  default-language:    Haskell2010

source-repository head
  type:     git
  location: 
